--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -96,6 +96,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="45dp"
         android:onClick="post"
-        android:text="@string/post" />
+        android:text="@string/post"
+        android:background="@color/buttoncolor"
+        />
 
 </LinearLayout>
