--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#ff5521</color>
     <color name="colorTransparent">#100066ff</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="buttoncolor">#64dd17</color>
 
 </resources>
