--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
 
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
     android:background="@color/colorTransparent"
     android:orientation="vertical"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteX="6dp"
+    tools:layout_editor_absoluteY="31dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/variableImageView"
@@ -16,12 +16,11 @@
         android:layout_height="88dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/no_avatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:clickable="true"
-        android:focusable="true" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -29,78 +28,56 @@
         android:layout_width="97dp"
         android:layout_height="16dp"
         android:layout_gravity="left"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="16dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/variableImageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/variableImageView" />
-
-
-    <TextView
-        android:id="@+id/textViewCity"
-        android:layout_width="74dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="City: "
-        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/variableImageView"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/variableTextViewAction"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_gravity="left"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         android:paddingLeft="16dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/variableTextViewCity"
-        app:layout_constraintTop_toTopOf="@+id/textViewWhatToDo" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/variableTextViewCity" />
 
-
-    <TextView
-        android:id="@+id/textViewWhatToDo"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="24dp"
-        android:text="what to do? "
-        app:layout_constraintEnd_toEndOf="@+id/textViewCity"
-        app:layout_constraintStart_toEndOf="@+id/variableImageView"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCity" />
 
     <TextView
         android:id="@+id/variableTextViewCity"
         android:layout_width="wrap_content"
         android:layout_height="29dp"
         android:layout_gravity="left"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="16dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/textViewCity"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/variableTextViewDescription"
         android:layout_width="336dp"
-        android:layout_height="18dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Here comes a multi line action  djpsj djds dojsdpj dlfkjfdj dflkjfdsj ldkfjpsdfj dfjpoj fsdjs'p ojdfop sdfjp' psdfjpo djoi oidjfp opdjp ojdo oidjfp iodsfjpi "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/variableTextViewUsersName" />
+        app:layout_constraintTop_toBottomOf="@+id/variableImageView" />
 
     <TextView
         android:id="@+id/variableTextViewPostId"
@@ -113,25 +90,32 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="31dp"
+        android:layout_width="102dp"
+        android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="#64d804"
         android:text="got a Question?"
+        android:textColor="@android:color/white"
         android:textSize="8sp"
-        app:layout_constraintEnd_toEndOf="@+id/yesBtn"
-        app:layout_constraintStart_toStartOf="@+id/yesBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/yesBtn" />
 
     <Button
         android:id="@+id/yesBtn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="267dp"
+        android:layout_height="27dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:background="#64d804"
         android:onClick="yesBtn"
         android:text="YES"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/variableTextViewDescription" />
 
@@ -139,10 +123,12 @@
         android:id="@+id/variableTextViewYesPerson"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Be the first to say Yes!"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
