--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -1,123 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
     android:layout_height="wrap_content"
     android:background="@color/colorTransparent"
     android:orientation="vertical"
-    tools:layout_editor_absoluteX="6dp"
-    tools:layout_editor_absoluteY="31dp">
+ >
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/variableImageView"
-        android:layout_width="97dp"
-        android:layout_height="88dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:src="@drawable/no_avatar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <TextView
-        android:id="@+id/variableTextViewUsersName"
-        android:layout_width="97dp"
-        android:layout_height="16dp"
-        android:layout_gravity="left"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:paddingLeft="16dp"
-        android:text="TextView"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/variableImageView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <TextView
-        android:id="@+id/variableTextViewAction"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_gravity="left"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:paddingLeft="16dp"
-        android:text="TextView"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/variableTextViewCity" />
-
-
-    <TextView
-        android:id="@+id/variableTextViewCity"
-        android:layout_width="wrap_content"
-        android:layout_height="29dp"
-        android:layout_gravity="left"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:paddingLeft="16dp"
-        android:text="TextView"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/variableTextViewDescription"
-        android:layout_width="336dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Here comes a multi line action  djpsj djds dojsdpj dlfkjfdj dflkjfdsj ldkfjpsdfj dfjpoj fsdjs'p ojdfop sdfjp' psdfjpo djoi oidjfp opdjp ojdo oidjfp iodsfjpi "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/variableImageView" />
-
-    <TextView
-        android:id="@+id/variableTextViewPostId"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:visibility="gone"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="192dp" />
+        android:orientation="horizontal"
+        >
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="102dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="#64d804"
-        android:text="got a Question?"
-        android:textColor="@android:color/white"
-        android:textSize="8sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yesBtn" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/variableImageView"
+                android:layout_width="97dp"
+                android:layout_height="88dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/no_avatar"
+                />
 
-    <Button
-        android:id="@+id/yesBtn"
-        android:layout_width="267dp"
-        android:layout_height="27dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:background="#64d804"
-        android:onClick="yesBtn"
-        android:text="YES"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/variableTextViewDescription" />
+            <TextView
+                android:id="@+id/variableTextViewUsersName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="25dp"
+                android:text="TextView"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                 />
+
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:id="@+id/variableTextViewCity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginTop="8dp"
+                android:paddingLeft="16dp"
+                android:text="TextView"
+                android:textColor="@android:color/black"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                />
+
+            <TextView
+                android:id="@+id/variableTextViewAction"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_gravity="left"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                android:paddingLeft="19dp"
+                android:text="TextView"
+                android:textColor="@android:color/black"
+                android:textSize="19sp"
+                android:textStyle="normal"
+                 />
+
+            <TextView
+                android:id="@+id/variableTextViewDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Here comes a multi line action  djpsj djds dojsdpj dlfkjfdj dflkjfdsj ldkfjpsdfj dfjpoj fsdjs'p ojdfop sdfjp' psdfjpo djoi oidjfp opdjp ojdo oidjfp iodsfjpi "
+                 />
+
+    </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+
+        <Button
+            android:id="@+id/yesBtn"
+            android:layout_width="250dp"
+            android:layout_height="27dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:background="#64d804"
+            android:onClick="yesBtn"
+            android:text="YES"
+            android:textColor="@android:color/white"
+            />
+
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="100dp"
+            android:layout_height="27dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:background="#64d804"
+            android:text="got a Question?"
+            android:textColor="@android:color/white"
+            android:textSize="8sp"
+            />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/variableTextViewYesPerson"
@@ -128,10 +136,20 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Be the first to say Yes!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        android:layout_gravity="center_horizontal"
+        />
 
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/variableTextViewPostId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="gone"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="192dp" />
+
+
+
+
+</LinearLayout>
