--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -105,7 +105,7 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="27dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="6dp"
