--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -93,7 +93,7 @@
         <Button
             android:id="@+id/yesBtn"
             android:layout_width="250dp"
-            android:layout_height="27dp"
+            android:layout_height="34dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
@@ -106,7 +106,7 @@
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
-            android:layout_height="27dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="6dp"
             android:layout_marginStart="8dp"
